@@ -1,3 +1,10 @@
+2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* protocol change: configure message required as first
+	  message
+	* set protocol version to 1
+	* simplify Elisp communication primitives
+
 2012-01-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* delete proof-full-annotation-internal (as Dave wished) (elisp only)
